--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
     artifactoryService: 'Kayal_Art'
     cliInstallationRepo: 'JFrog_CLI'
     installCustomVersion: true
-    cliVersion: '$(jfrogCliVersion)'
+    cliVersion: '1.43.2'
