--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -20,9 +20,18 @@ steps:
 - task: ArtifactoryGenericDownload@3
   inputs:
     connection: 'Kayal_Art'
-    specSource: 'file'
-    file: 'pavan-generic/test.sln'
+    specSource: 'taskConfiguration'
+    fileSpec: |
+      {
+        "files": [
+          {
+            "pattern": "/*.sln",
+            "target": "pavan-generic/"
+          }
+        ]
+      }
     failNoOp: true
+
 - task: ArtifactoryNuGet@2
   inputs:
     command: 'restore'
