--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,8 @@ steps:
       {
         "files": [
           {
-            "pattern": "/home/vsts/work/r1/a/*.jar",
-            "target": "aptiolicensetest/"
+            "pattern": "aptiolicensetest/",
+            "target": "/home/vsts/work/r1/a/*.jar"
           }
         ]
       }
