--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,16 +17,16 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
-- task: ArtifactoryGenericDownload@3
+- task: ArtifactoryGenericUpload@2
   inputs:
-    connection: 'Gaja-Art'
+    artifactoryService: 'Gaja-Art'
     specSource: 'taskConfiguration'
     fileSpec: |
       {
         "files": [
           {
-            "pattern": "aptiolicensetest/*.jar",
-            "target": "/home/vsts/work/r1/a/"
+            "pattern": "/home/vsts/work/r1/a/*.jar",
+            "target": "broad-test/"
           }
         ]
       }
