Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
       {
         "files": [
           {
-            "pattern": "/home/vsts/work/r1/a/*.jar",
+            "pattern": "/home/vsts/work/r1/a/*",
             "target": "broad-test/"
           }
         ]
