Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,11 @@ steps:
         ]
       }
     failNoOp: true
+- task: CmdLine@2
+  inputs:
+    script: 'ls -lart' 
+    #workingDirectory: # Optional
+    #failOnStderr: false # Optional
 - task: ArtifactoryGenericUpload@2
   inputs:
     artifactoryService: 'clouddsein'
