--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,42 +1,42 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+  # Starter pipeline
+  # Start with a minimal pipeline that you can customize to build and deploy your code.
+  # Add steps that build, run tests, deploy, and more:
+  # https://aka.ms/yaml
 
-trigger:
-- master
+  trigger:
+  - master
 
-pool:
-  vmImage: ubuntu-latest
+  pool:
+    vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  steps:
+  - script: echo Hello, world!
+    displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
-- task: ArtifactoryGenericDownload@3
-  inputs:
-    connection: 'clouddsein'
-    specSource: 'taskConfiguration'
-    fileSpec: |
-      {
-        "files": [
-          {
-            "pattern": "gaja-maven-local/com/*",
-            "target": "/home/vsts/work/r1/a/",
-               "recursive": "true",
-               "flat": "false"
-          }
-        ]
-      }
-    projectKey: pro2
-    failNoOp: true
-- task: CmdLine@2
-  inputs:
-    script: 'find /home/vsts/work/r1/a/ -type d' 
-    #workingDirectory: # Optional
-    #failOnStderr: false # Optional
+  - script: |
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+    displayName: 'Run a multi-line script'
+  - task: ArtifactoryGenericDownload@3
+    inputs:
+      connection: 'clouddsein'
+      specSource: 'taskConfiguration'
+      fileSpec: |
+        {
+          "files": [
+            {
+              "pattern": "gaja-maven-local/*",
+              "target": "/home/vsts/work/r1/a/",
+                "recurse": "true",
+                "flat": "false"
+            }
+          ]
+        }
+      projectKey: pro2
+      failNoOp: true
+  - task: CmdLine@2
+    inputs:
+      script: 'find /home/vsts/work/r1/a/ -type d' 
+      #workingDirectory: # Optional
+      #failOnStderr: false # Optional
 
