--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@
           "files": [
             {
               "pattern": "gaja-maven-local/*",
-              "target": "/home/vsts/work/r1/a/",
+              "target": "/",
                 "recurse": "true",
                 "flat": "false"
             }
@@ -47,7 +47,7 @@
       projectKey: pro2
   - task: CmdLine@2
     inputs:
-      script: 'find /home/vsts/work/r1/a/ -type d' 
+      script: 'find / -type d' 
       #workingDirectory: # Optional
       #failOnStderr: false # Optional
 
